logs/alphatwirl.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/alphatwirl'...
Listing './lib/python3.5/site-packages/alphatwirl/binning'...
Listing './lib/python3.5/site-packages/alphatwirl/cmsedm'...
Listing './lib/python3.5/site-packages/alphatwirl/collector'...
Listing './lib/python3.5/site-packages/alphatwirl/concurrently'...
Compiling './lib/python3.5/site-packages/alphatwirl/concurrently/example_load.py'...
***   File "./lib/python3.5/site-packages/alphatwirl/concurrently/example_load.py", line 37
    print package
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/alphatwirl/concurrently/example_load_result.py'...
***   File "./lib/python3.5/site-packages/alphatwirl/concurrently/example_load_result.py", line 38
    print package
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/alphatwirl/concurrently/example_submit_htcondor.py'...
***   File "./lib/python3.5/site-packages/alphatwirl/concurrently/example_submit_htcondor.py", line 32
    print 'received KeyboardInterrupt'
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/alphatwirl/configure'...
Listing './lib/python3.5/site-packages/alphatwirl/delphes'...
Listing './lib/python3.5/site-packages/alphatwirl/heppyresult'...
Listing './lib/python3.5/site-packages/alphatwirl/loop'...
Listing './lib/python3.5/site-packages/alphatwirl/misc'...
Listing './lib/python3.5/site-packages/alphatwirl/progressbar'...
Listing './lib/python3.5/site-packages/alphatwirl/roottree'...
Listing './lib/python3.5/site-packages/alphatwirl/selection'...
Listing './lib/python3.5/site-packages/alphatwirl/selection/factories'...
Listing './lib/python3.5/site-packages/alphatwirl/selection/modules'...
Listing './lib/python3.5/site-packages/alphatwirl/summary'...
Listing './lib/python3.5/site-packages/alphatwirl-0.9.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/unit'...
Listing './lib/python3.5/site-packages/tests/unit/binning'...
Listing './lib/python3.5/site-packages/tests/unit/collector'...
Listing './lib/python3.5/site-packages/tests/unit/concurrently'...
Listing './lib/python3.5/site-packages/tests/unit/configure'...
Listing './lib/python3.5/site-packages/tests/unit/delphes'...
Listing './lib/python3.5/site-packages/tests/unit/examples'...
Listing './lib/python3.5/site-packages/tests/unit/heppyresult'...
Listing './lib/python3.5/site-packages/tests/unit/loop'...
Listing './lib/python3.5/site-packages/tests/unit/misc'...
Listing './lib/python3.5/site-packages/tests/unit/progressbar'...
Listing './lib/python3.5/site-packages/tests/unit/roottree'...
Listing './lib/python3.5/site-packages/tests/unit/selection'...
Listing './lib/python3.5/site-packages/tests/unit/selection/factories'...
Listing './lib/python3.5/site-packages/tests/unit/selection/modules'...
Listing './lib/python3.5/site-packages/tests/unit/summary'...
Listing './share'...
Listing './share/python-wheels'...
